--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.37",
-    "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -42,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.195"
+    "@types/lodash": "^4.14.195",
+    "@types/react": "^18.2.39"
   }
 }
